提交准备丢掉的StringUtil.java